Terminacion de la primera entrega

--- a/pages/acerca_de.html
+++ b/pages/acerca_de.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SISTEC READ - Acerca de</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
     <script src="script.js" defer></script>
 </head>
 <body>
@@ -16,7 +16,7 @@
         <nav class="main-nav">
             <div class="nav-container">
                 <div class="logo">
-                    <h1>SISTEC READ</h1>
+                    <span>SISTEC READ</span>
                 </div>
                 <ul class="nav-menu">
                     <li><a href="index.html" class="active">Inicio</a></li>
@@ -30,8 +30,8 @@
 
     <main>
         <div class="container">
-            <h1 class="page-title">Acerca de SISTEC READ</h1>
             <section class="about-section">
+                <h1 class="page-title">Acerca de SISTEC READ</h1>
                 <article>
                     <h2 class="categoria-titulo">Nuestra historia</h2>
                     <p>SISTEC READ fue fundada en 2020 en Tuxtla Gutiérrez por un grupo de apasionados por la lectura: Gutiérrez Nuñez Alejandro, Guzmán Chablé Jeizer Oswaldo y Sánchez Villanueva Fernando de Jesús. Con la visión de fomentar el acceso al conocimiento, nuestros fundadores crearon una librería que combina un catálogo diverso con un compromiso profundo con la comunidad lectora de Chiapas. Actualmente, la librería es dirigida por Alejandro Gutiérrez Nuñez, quien actúa como director general, y administrada por Jeizer Guzmán Chablé, asegurando una gestión eficiente y un servicio de calidad para todos nuestros clientes.</p>
@@ -83,3 +83,4 @@
     </footer>
 </body>
 </html>
+
