--- a/pages/categorias.html
+++ b/pages/categorias.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SISTEC READ - Catálogo de Libros</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="icon" href="https://tse3.mm.bing.net/th/id/OIP.nBwIfauMfjWd0qbnifW7YgHaHa?rs=1&pid=ImgDetMain&o=7&rm=3 "> 
 </head>
 <body>
@@ -16,7 +16,7 @@
             <div class="nav-container">
                 <!-- Logotipo -->
                 <div class="logo">
-                    <h1>SISTEC READ</h1>
+                    <span>SISTEC READ</span>
                 </div>
                 
                 <!-- Lista de navegación -->
