--- a/pages/reseñas.html
+++ b/pages/reseñas.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SISTEC READ - Reseñas</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
     <header>
         <nav class="main-nav">
             <div class="nav-container">
                 <div class="logo">
-                    <h1>SISTEC READ</h1>
+                    <span>SISTEC READ</span>
                 </div>
                 <ul class="nav-menu">
                     <li><a href="index.html" class="active">Inicio</a></li>
@@ -32,6 +31,7 @@
         <div class="container">
             <h1 class="page-title">Reseñas de Nuestros Clientes</h1>
             <section class="reviews-section">
+                <h2>Se presenta: </h2>
                 <article class="review-card">
                     <div class="review-content">
                         <h2 class="review-title">Por invitación</h2>
