--- a/pages/reseñas.html
+++ b/pages/reseñas.html
@@ -1,96 +1,112 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <!-- Configuración básica del documento -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SISTEC READ - Reseñas</title>
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <title>Reseñas - SISTEC READ</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <nav class="main-nav">
-            <div class="nav-container">
-                <div class="logo">
-                    <span>SISTEC READ</span>
-                </div>
-                <ul class="nav-menu">
-                    <li><a href="index.html" class="active">Inicio</a></li>
-                    <li><a href="categorias.html">Categorías</a></li>
-                    <li><a href="reseñas.html">Reseñas</a></li>
-                    <li><a href="#footer">Información Adicional</a></li>
-                </ul>
+<!-- Encabezado con navegación y búsqueda -->
+<header>
+    <!-- Navegación principal -->
+    <nav class="main-nav">
+        <div class="nav-container">
+            <!-- Logo de la librería -->
+            <div class="logo">
+                <h1>SISTEC READ</h1>
             </div>
-        </nav>
-        <div class="search-container">
-            <input type="search" placeholder="Buscar Libros" class="search-input" id="searchInput">
-            <button type="button" class="search-button" onclick="buscarLibros()">Buscar</button>
-        </div>
-    </header>
-
-    <main>
-        <div class="container">
-            <h1 class="page-title">Reseñas de Nuestros Clientes</h1>
-            <section class="reviews-section">
-                <h2>Se presenta: </h2>
-                <article class="review-card">
-                    <div class="review-content">
-                        <h2 class="review-title">Por invitación</h2>
-                        <p class="review-author">Gomez - Actualizada el 19 sept 2025</p>
-                        <p class="review-text">SISTEC READ es genial todos sus productos llegan muy bien envueltos el contenido en perfecto estado se comunican con el cliente en inmediato tienen una gran variedad: tanto libros de lectura...</p>
-                        <div class="review-rating">★★★★★</div>
-                    </div>
-                </article>
-                <article class="review-card">
-                    <div class="review-content">
-                        <h2 class="review-title">Por invitación</h2>
-                        <p class="review-author">ALSOLGAR - 18 sept 2025</p>
-                        <p class="review-text">Muy buena experiencia con CSISTEC READ. Destaco los puntos de recogida, que hacen todo el proceso muy cómodo. En todo momento pude localizar mi pedido sin problema, lo que da mucha tranquilidad. Ade...</p>
-                        <div class="review-rating">★★★★★</div>
-                    </div>
-                </article>
-            </section>
-            <section class="review-form-section">
-                <h2 class="categoria-titulo">Deja tu reseña</h2>
-                <p>Comparte tu experiencia con SISTEC READ. ¡Tu opinión nos ayuda a mejorar!</p>
-                <form action="#" method="post" class="review-form">
-                    <label for="nombre">Nombre:</label>
-                    <input type="text" id="nombre" name="nombre" required placeholder="Ingresa tu nombre">
-
-                    <label for="calificacion">Calificación:</label>
-                    <select id="calificacion" name="calificacion" required>
-                        <option value="" disabled selected>Selecciona una calificación</option>
-                        <option value="5">★★★★★</option>
-                        <option value="4">★★★★☆</option>
-                        <option value="3">★★★☆☆</option>
-                        <option value="2">★★☆☆☆</option>
-                        <option value="1">★☆☆☆☆</option>
-                    </select>
-
-                    <label for="comentario">Comentario:</label>
-                    <textarea id="comentario" name="comentario" rows="5" required placeholder="Escribe tu reseña aquí"></textarea>
-
-                    <button type="submit" class="btn btn-primary">Enviar reseña</button>
-                </form>
-            </section>
-        </div>
-    </main>
-
-    <footer id="footer">
-        <div class="footer-container">
-            <h4>Información Adicional</h4>
-            <ul class="footer-menu">
-                <li><a href="acerca_de.html">Acerca de</a></li>
-                <li><a href="ubicacion.html">Ubicación</a></li>
-                <li><a href="contactanos.html">Contacto</a></li>
-                <li><a href="reseñas.html">Reseñas</a></li>
-                <li><a href="#">Políticas de privacidad</a></li>
-                <li><a href="#">Términos y condiciones</a></li>
+            <!-- Menú de navegación -->
+            <ul class="nav-menu">
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="categorias.html">Categorías</a></li>
+                <li><a href="reseñas.html" class="active">Reseñas</a></li>
+                <li><a href="#">Información Adicional</a></li>
             </ul>
-            <div class="footer-info">
-                <p>&copy; 2025 SISTEC READ. Todos los derechos reservados.</p>
-                <p>Promoviendo la lectura y el conocimiento en Tuxtla Gutiérrez.</p>
+        </div>
+    </nav>
+    <!-- Contenedor para el formulario de búsqueda -->
+    <div class="search-container">
+        <form>
+            <input type="text" class="search-input" placeholder="Buscar">
+            <button type="submit" class="search-button">Buscar</button>
+        </form>
+    </div>
+</header>
+
+<!-- Contenido principal de la página de reseñas -->
+<main>
+    <!-- Sección de reseñas de clientes -->
+    <section class="container reviews-section">
+        <!-- Título principal -->
+        <h2 class="page-title">Reseñas de Nuestros Clientes</h2>
+        <!-- Contenedor de reseñas -->
+        <div>
+            <!-- Tarjeta de reseña individual -->
+            <div class="review-card">
+                <!-- Contenido de la reseña -->
+                <div class="review-content">
+                    <h3 class="review-title">Por invitación</h3>
+                    <p class="review-author">Gomez - Actualizada el 19 sept 2025</p>
+                    <p class="review-text">SISTEC READ es genial todos sus productos llegan muy bien envueltos...</p>
+                    <p class="review-rating">★★★★★</p>
+                </div>
+            </div>
+            <!-- Repetir para otras reseñas -->
+            <div class="review-card">
+                <div class="review-content">
+                    <h3 class="review-title">Por invitación</h3>
+                    <p class="review-author">ALSOLGAR - 18 sept 2025</p>
+                    <p class="review-text">Muy buena experiencia con SISTEC READ...</p>
+                    <p class="review-rating">★★★★★</p>
+                </div>
             </div>
         </div>
-    </footer>
+        <!-- Formulario para dejar una reseña -->
+        <div class="review-form-section">
+            <h3>Deja tu reseña</h3>
+            <p>Comparte tu experiencia con SISTEC READ...</p>
+            <form class="review-form">
+                <label for="nombre">Nombre:</label>
+                <input type="text" id="nombre" name="nombre">
+                <label for="calificacion">Calificación:</label>
+                <select id="calificacion" name="calificacion">
+                    <option value="">Selecciona una calificación</option>
+                    <option value="5">★★★★★</option>
+                    <option value="4">★★★★☆</option>
+                    <option value="3">★★★☆☆</option>
+                    <option value="2">★★☆☆☆</option>
+                    <option value="1">★☆☆☆☆</option>
+                </select>
+                <label for="comentario">Comentario:</label>
+                <textarea id="comentario" name="comentario"></textarea>
+                <button type="submit">Enviar reseña</button>
+            </form>
+        </div>
+    </section>
+</main>
+
+<!-- Pie de página -->
+<footer id="footer">
+    <!-- Contenedor del footer -->
+    <div class="footer-container">
+        <h4>Información Adicional</h4>
+        <!-- Menú de enlaces -->
+        <ul class="footer-menu">
+            <li><a href="acerca_de.html">Acerca de</a></li>
+            <li><a href="ubicacion.html">Ubicación</a></li>
+            <li><a href="contactanos.html">Contacto</a></li>
+            <li><a href="reseñas.html" class="active">Reseñas</a></li>
+            <li><a href="#">Políticas de privacidad</a></li>
+            <li><a href="#">Términos y condiciones</a></li>
+        </ul>
+        <!-- Información de derechos -->
+        <div class="footer-info">
+            <p>© 2025 SISTEC READ. Todos los derechos reservados.</p>
+            <p>Promoviendo la lectura y el conocimiento en Tuxtla Gutiérrez.</p>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
