--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -1,101 +1,105 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <!-- Configuración básica del documento -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SISTEC READ - Ubicación</title>
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <title>Ubicación de SISTEC READ</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<!-- Encabezado con búsqueda y navegación -->
 <header>
+    <!-- Contenedor para el formulario de búsqueda -->
     <div class="search-container">
-        <input type="search" placeholder="Buscar Libros" class="search-input" id="searchInput">
-        <button type="button" class="search-button" onclick="buscarLibros()">Buscar</button>
+        <form>
+            <input type="text" class="search-input" placeholder="Buscar">
+            <button type="submit" class="search-button">Buscar</button>
+        </form>
     </div>
+    <!-- Navegación principal -->
     <nav class="main-nav">
         <div class="nav-container">
+            <!-- Logo de la librería -->
             <div class="logo">
-                <span>SISTEC READ</span>
+                <h1>SISTEC READ</h1>
             </div>
+            <!-- Menú de navegación -->
             <ul class="nav-menu">
-                <li><a href="index.html" class="active">Inicio</a></li>
+                <li><a href="index.html">Inicio</a></li>
                 <li><a href="categorias.html">Categorías</a></li>
                 <li><a href="reseñas.html">Reseñas</a></li>
-                <li><a href="#footer">Información Adicional</a></li>
+                <li><a href="#" class="active">Información Adicional</a></li>
             </ul>
         </div>
     </nav>
 </header>
 
+<!-- Contenido principal de la página de ubicación -->
 <main>
-    <div class="container">
-        <h1 class="page-title">Ubicación de SISTEC READ</h1>
-        <section class="location-section">
-            <h2 class="section-title">Detalles de Ubicación</h2> <!-- Encabezado añadido -->
-            <article>
-                <h2 class="categoria-titulo">Nuestra librería</h2>
-                <p>Visítanos en el corazón de Tuxtla Gutiérrez. Nuestra tienda ofrece un ambiente acogedor y una amplia selección de libros para todas las edades.</p>
-                <p><strong>Dirección:</strong> Av. Central Poniente 123, Centro, Tuxtla Gutiérrez, Chiapas, CP 29000</p>
-                <table class="location-table">
-                    <caption>Horarios de atención</caption>
-                    <thead>
-                    <tr>
-                        <th>Día</th>
-                        <th>Horario</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <td>Lunes a viernes</td>
-                        <td>9:00 AM - 8:00 PM</td>
-                    </tr>
-                    <tr>
-                        <td>Sábado</td>
-                        <td>10:00 AM - 6:00 PM</td>
-                    </tr>
-                    <tr>
-                        <td>Domingo</td>
-                        <td>Cerrado</td>
-                    </tr>
-                    </tbody>
-                </table>
-            </article>
-            <article>
-                <h2 class="categoria-titulo">Encuéntranos en el mapa</h2>
-                <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3877.706311176253!2d-93.1593683!3d16.760791!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85ecd98cdd9a8c75%3A0xbba0ef33c7665ea4!2sCasa%20de%20gopar%20Toledo!5e0!3m2!1ses-419!2smx!4v1727463799999!5m2!1ses-419!2smx"
-                        width="600"
-                        height="400"
-                        style="border:0;"
-                        allowfullscreen=""
-                        loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade">
-                </iframe>
-            </article>
-            <aside>
-                <h3>Cómo llegar</h3>
-                <ul>
-                    <li><strong>En auto:</strong> Estacionamiento disponible en las calles aledañas.</li>
-                    <li><strong>Transporte público:</strong> Colectivo línea 1, parada "Plaza Central".</li>
-                    <li><strong>A pie:</strong> A 5 minutos caminando desde la Catedral de San Marcos.</li>
-                </ul>
-            </aside>
-        </section>
-    </div>
+    <!-- Sección con detalles de ubicación -->
+    <section class="container location-section">
+        <!-- Título principal -->
+        <h2 class="page-title">Ubicación de SISTEC READ</h2>
+        <!-- Subsección: Detalles de la librería -->
+        <div>
+            <h3>Nuestra librería</h3>
+            <p>Visítanos en el corazón de Tuxtla Gutiérrez...</p>
+            <p><strong>Dirección:</strong> Av. Central Poniente 123, Centro, Tuxtla Gutiérrez, Chiapas, CP 29000</p>
+            <!-- Tabla de horarios -->
+            <table class="location-table">
+                <caption>Horarios de atención</caption>
+                <tr>
+                    <th>Día</th>
+                    <th>Horario</th>
+                </tr>
+                <tr>
+                    <td>Lunes a viernes</td>
+                    <td>9:00 AM - 8:00 PM</td>
+                </tr>
+                <tr>
+                    <td>Sábado</td>
+                    <td>10:00 AM - 6:00 PM</td>
+                </tr>
+                <tr>
+                    <td>Domingo</td>
+                    <td>Cerrado</td>
+                </tr>
+            </table>
+        </div>
+        <!-- Subsección: Mapa -->
+        <div>
+            <h3>Encuéntranos en el mapa</h3>
+            <iframe src="..." frameborder="0"></iframe>
+        </div>
+        <!-- Subsección: Cómo llegar -->
+        <div>
+            <h3>Cómo llegar</h3>
+            <ul>
+                <li><strong>En auto:</strong> Estacionamiento disponible en las calles aledañas.</li>
+                <li><strong>Transporte público:</strong> Colectivo línea 1, parada "Plaza Central".</li>
+                <li><strong>A pie:</strong> A 5 minutos caminando desde la Catedral de San Marcos.</li>
+            </ul>
+        </div>
+    </section>
 </main>
 
+<!-- Pie de página -->
 <footer id="footer">
+    <!-- Contenedor del footer -->
     <div class="footer-container">
         <h4>Información Adicional</h4>
+        <!-- Menú de enlaces -->
         <ul class="footer-menu">
             <li><a href="acerca_de.html">Acerca de</a></li>
-            <li><a href="ubicacion.html">Ubicación</a></li>
+            <li><a href="ubicacion.html" class="active">Ubicación</a></li>
             <li><a href="contactanos.html">Contacto</a></li>
             <li><a href="#">Políticas de privacidad</a></li>
             <li><a href="#">Términos y condiciones</a></li>
         </ul>
+        <!-- Información de derechos -->
         <div class="footer-info">
-            <p>&copy; 2025 SISTEC READ. Todos los derechos reservados.</p>
+            <p>© 2025 SISTEC READ. Todos los derechos reservados.</p>
             <p>Promoviendo la lectura y el conocimiento en Tuxtla Gutiérrez.</p>
         </div>
     </div>
