--- a/pages/acerca_de.html
+++ b/pages/acerca_de.html
@@ -1,86 +1,94 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <!-- Configuración básica del documento -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SISTEC READ - Acerca de</title>
-    <link rel="stylesheet" href="../assets/css/style.css">
-    <script src="script.js" defer></script>
+    <title>Acerca de SISTEC READ</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <div class="search-container">
-            <input type="search" placeholder="Buscar Libros" class="search-input" id="searchInput">
-            <button type="button" class="search-button" onclick="buscarLibros()">Buscar</button>
-        </div>
-        <nav class="main-nav">
-            <div class="nav-container">
-                <div class="logo">
-                    <span>SISTEC READ</span>
-                </div>
-                <ul class="nav-menu">
-                    <li><a href="index.html" class="active">Inicio</a></li>
-                    <li><a href="categorias.html">Categorías</a></li>
-                    <li><a href="reseñas.html">Reseñas</a></li>
-                    <li><a href="#footer">Información Adicional</a></li>
-                </ul>
+<!-- Encabezado con búsqueda y navegación -->
+<header>
+    <!-- Contenedor para el formulario de búsqueda -->
+    <div class="search-container">
+        <form>
+            <input type="text" class="search-input" placeholder="Buscar">
+            <button type="submit" class="search-button">Buscar</button>
+        </form>
+    </div>
+    <!-- Navegación principal -->
+    <nav class="main-nav">
+        <div class="nav-container">
+            <!-- Logo de la librería -->
+            <div class="logo">
+                <h1>SISTEC READ</h1>
             </div>
-        </nav>
-    </header>
-
-    <main>
-        <div class="container">
-            <section class="about-section">
-                <h1 class="page-title">Acerca de SISTEC READ</h1>
-                <article>
-                    <h2 class="categoria-titulo">Nuestra historia</h2>
-                    <p>SISTEC READ fue fundada en 2020 en Tuxtla Gutiérrez por un grupo de apasionados por la lectura: Gutiérrez Nuñez Alejandro, Guzmán Chablé Jeizer Oswaldo y Sánchez Villanueva Fernando de Jesús. Con la visión de fomentar el acceso al conocimiento, nuestros fundadores crearon una librería que combina un catálogo diverso con un compromiso profundo con la comunidad lectora de Chiapas. Actualmente, la librería es dirigida por Alejandro Gutiérrez Nuñez, quien actúa como director general, y administrada por Jeizer Guzmán Chablé, asegurando una gestión eficiente y un servicio de calidad para todos nuestros clientes.</p>
-                    <img src="https://images.unsplash.com/photo-1524995997946-a1c2e315a42f?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Pila de libros en una librería" class="libro-imagen">
-                </article>
-                <article>
-                    <h2 class="categoria-titulo">Misión, visión y valores</h2>
-                    <ul>
-                        <li><strong>Misión:</strong> Promover la lectura como pilar de desarrollo personal y cultural, ofreciendo un catálogo diverso y accesible.</li>
-                        <li><strong>Visión:</strong> Ser la librería líder en Chiapas, reconocida por su calidad y compromiso con la comunidad lectora.</li>
-                        <li><strong>Valores:</strong>
-                            <ol>
-                                <li>Pasión por los libros</li>
-                                <li>Compromiso con la comunidad</li>
-                                <li>Excelencia en el servicio</li>
-                                <li>Inclusión y diversidad</li>
-                            </ol>
-                        </li>
-                    </ul>
-                </article>
-                <aside>
-                    <h3>¿Por qué elegirnos?</h3>
-                    <ul>
-                        <li>Catálogo extenso de géneros literarios.</li>
-                        <li>Asesoría personalizada para encontrar tu próximo libro.</li>
-                        <li>Eventos culturales y talleres literarios.</li>
-                        <li>Precios justos y promociones especiales.</li>
-                    </ul>
-                </aside>
-            </section>
-        </div>
-    </main>
-
-    <footer id="footer">
-        <div class="footer-container">
-            <h4>Información Adicional</h4>
-            <ul class="footer-menu">
-                <li><a href="acerca_de.html">Acerca de</a></li>
-                <li><a href="ubicacion.html">Ubicación</a></li>
-                <li><a href="contactanos.html">Contacto</a></li>
-                <li><a href="#">Políticas de privacidad</a></li>
-                <li><a href="#">Términos y condiciones</a></li>
+            <!-- Menú de navegación -->
+            <ul class="nav-menu">
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="categorias.html">Categorías</a></li>
+                <li><a href="reseñas.html">Reseñas</a></li>
+                <li><a href="#" class="active">Información Adicional</a></li>
             </ul>
-            <div class="footer-info">
-                <p>&copy; 2025 SISTEC READ. Todos los derechos reservados.</p>
-                <p>Promoviendo la lectura y el conocimiento en Tuxtla Gutiérrez.</p>
-            </div>
         </div>
-    </footer>
+    </nav>
+</header>
+
+<!-- Contenido principal de la página "Acerca de" -->
+<main>
+    <!-- Sección con información de la librería -->
+    <section class="container about-section">
+        <!-- Título principal -->
+        <h2 class="page-title">Acerca de SISTEC READ</h2>
+        <!-- Subsección: Nuestra historia -->
+        <div>
+            <h3>Nuestra historia</h3>
+            <p>SISTEC READ fue fundada en 2020 en Tuxtla Gutiérrez por un grupo de apasionados por la lectura...</p>
+        </div>
+        <!-- Subsección: Misión, visión y valores -->
+        <div>
+            <h3>Misión, visión y valores</h3>
+            <p><strong>Misión:</strong> Promover la lectura como pilar de desarrollo personal y cultural...</p>
+            <ul>
+                <li>Pasión por los libros</li>
+                <li>Compromiso con la comunidad</li>
+                <li>Excelencia en el servicio</li>
+                <li>Inclusión y diversidad</li>
+            </ul>
+        </div>
+        <!-- Subsección: Por qué elegirnos -->
+        <div>
+            <h3>¿Por qué elegirnos?</h3>
+            <ul>
+                <li>Catálogo extenso de géneros literarios.</li>
+                <li>Asesoría personalizada para encontrar tu próximo libro.</li>
+                <li>Eventos culturales y talleres literarios.</li>
+                <li>Precios justos y promociones especiales.</li>
+            </ul>
+        </div>
+    </section>
+</main>
+
+<!-- Pie de página -->
+<footer id="footer">
+    <!-- Contenedor del footer -->
+    <div class="footer-container">
+        <h4>Información Adicional</h4>
+        <!-- Menú de enlaces -->
+        <ul class="footer-menu">
+            <li><a href="acerca_de.html" class="active">Acerca de</a></li>
+            <li><a href="ubicacion.html">Ubicación</a></li>
+            <li><a href="contactanos.html">Contacto</a></li>
+            <li><a href="#">Políticas de privacidad</a></li>
+            <li><a href="#">Términos y condiciones</a></li>
+        </ul>
+        <!-- Información de derechos -->
+        <div class="footer-info">
+            <p>© 2025 SISTEC READ. Todos los derechos reservados.</p>
+            <p>Promoviendo la lectura y el conocimiento en Tuxtla Gutiérrez.</p>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
-
