--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -1,96 +1,105 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <!-- Configuración básica del documento -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SISTEC READ - Contáctanos</title>
-    <link rel="stylesheet" href="../assets/css/style.css">
-    <script src="script.js" defer></script>
+    <title>Contáctanos - SISTEC READ</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <!-- Buscador con botón de buscar -->
-        <div class="search-container">
-            <input type="search" placeholder="Buscar libros por título o autor..." class="search-input" id="searchInput">
-            <button type="button" class="search-button" onclick="buscarLibros()">Buscar</button>
-        </div>
-        <nav class="main-nav">
-            <div class="nav-container">
-                <div class="logo">
-                    <span>SISTEC READ</span>
-                </div>
-                <ul class="nav-menu">
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="categorias.html">Categorías</a></li>
-                    <li><a href="reseñas.html" class="active">Reseñas</a></li>
-                    <li><a href="#footer">Informacion Adicional</a></li>
-                </ul>
+<!-- Encabezado con búsqueda y navegación -->
+<header>
+    <!-- Contenedor para el formulario de búsqueda -->
+    <div class="search-container">
+        <form>
+            <input type="text" class="search-input" placeholder="Buscar">
+            <button type="submit" class="search-button">Buscar</button>
+        </form>
+    </div>
+    <!-- Navegación principal -->
+    <nav class="main-nav">
+        <div class="nav-container">
+            <!-- Logo de la librería -->
+            <div class="logo">
+                <h1>SISTEC READ</h1>
             </div>
-        </nav>
-    </header>
-
-    <main>
-        <div class="container">
-            <section class="contact-section">
-                <h1>Contáctanos</h1>
-                <article>
-                    <h2 class="categoria-titulo">Envíanos tu consulta</h2>
-                    <p>En SISTEC READ, nuestro compromiso es conectar a los lectores con los libros que aman. Completa el formulario para cualquier consulta, sugerencia o seguimiento de pedidos. ¡Te responderemos pronto!</p>
-                    <form action="#" method="post" class="contact-form">
-                        <label for="nombre">Nombre completo:</label>
-                        <input type="text" id="nombre" name="nombre" required placeholder="Ingresa tu nombre" pattern="[A-Za-z\s]{2,50}" title="Solo letras y espacios, entre 2 y 50 caracteres">
-
-                        <label for="email">Correo electrónico:</label>
-                        <input type="email" id="email" name="email" required placeholder="Ingresa tu correo">
-
-                        <label for="tipo-consulta">Tipo de consulta:</label>
-                        <select id="tipo-consulta" name="tipo-consulta" required>
-                            <option value="" disabled selected>Selecciona una opción</option>
-                            <option value="informacion">Información sobre libros</option>
-                            <option value="pedidos">Seguimiento de pedidos</option>
-                            <option value="sugerencias">Sugerencias</option>
-                            <option value="otro">Otro</option>
-                        </select>
-
-                        <label for="mensaje">Mensaje:</label>
-                        <textarea id="mensaje" name="mensaje" rows="5" required placeholder="Escribe tu mensaje aquí" maxlength="500"></textarea>
-
-                        <button type="submit" class="btn btn-primary">Enviar</button>
-                    </form>
-                </article>
-                <aside>
-                    <h3>Otras formas de contacto</h3>
-                    <ul>
-                        <li><strong>Correo:</strong> <a href="mailto:info@sistecread.com">info@sistecread.com</a></li>
-                        <li><strong>Teléfono:</strong> <a href="tel:+529611234567">+52 (961) 123-4567</a></li>
-                        <li><strong>Redes sociales:</strong>
-                            <ul>
-                                <li><a href="https://facebook.com/sistecread" target="_blank">Facebook</a></li>
-                                <li><a href="https://twitter.com/sistecread" target="_blank">Twitter</a></li>
-                                <li><a href="https://instagram.com/sistecread" target="_blank">Instagram</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </aside>
-            </section>
-        </div>
-    </main>
-
-    <footer id="footer">
-        <div class="footer-container">
-            <h4>Información Adicional</h4>
-            <ul class="footer-menu">
-                <li><a href="acerca_de.html">Acerca de</a></li>
-                <li><a href="ubicacion.html">Ubicación</a></li>
-                <li><a href="contactanos.html">Contacto</a></li>
-                <li><a href="#">Políticas de privacidad</a></li>
-                <li><a href="#">Términos y condiciones</a></li>
+            <!-- Menú de navegación -->
+            <ul class="nav-menu">
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="categorias.html">Categorías</a></li>
+                <li><a href="reseñas.html">Reseñas</a></li>
+                <li><a href="#" class="active">Información Adicional</a></li>
             </ul>
-            <div class="footer-info">
-                <p>&copy; 2025 SISTEC READ. Todos los derechos reservados.</p>
-                <p>Promoviendo la lectura y el conocimiento en Tuxtla Gutiérrez.</p>
-            </div>
         </div>
-    </footer>
+    </nav>
+</header>
+
+<!-- Contenido principal de la página de contacto -->
+<main>
+    <!-- Sección con formulario y datos de contacto -->
+    <section class="container contact-section">
+        <!-- Título principal -->
+        <h2 class="page-title">Contáctanos</h2>
+        <!-- Subsección: Formulario de contacto -->
+        <div>
+            <h3>Envíanos tu consulta</h3>
+            <p>En SISTEC READ, nuestro compromiso es conectar a los lectores con los libros que aman...</p>
+            <!-- Formulario de contacto -->
+            <form class="contact-form">
+                <label for="nombre">Nombre completo:</label>
+                <input type="text" id="nombre" name="nombre">
+                <label for="correo">Correo electrónico:</label>
+                <input type="email" id="correo" name="correo">
+                <label for="tipo">Tipo de consulta:</label>
+                <select id="tipo" name="tipo">
+                    <option value="">Selecciona una opción</option>
+                    <option value="libros">Información sobre libros</option>
+                    <option value="pedidos">Seguimiento de pedidos</option>
+                    <option value="sugerencias">Sugerencias</option>
+                    <option value="otro">Otro</option>
+                </select>
+                <label for="mensaje">Mensaje:</label>
+                <textarea id="mensaje" name="mensaje"></textarea>
+                <button type="submit">Enviar</button>
+            </form>
+        </div>
+        <!-- Subsección: Otras formas de contacto -->
+        <aside>
+            <h3>Otras formas de contacto</h3>
+            <ul>
+                <li><strong>Correo:</strong> info@sistecread.com</li>
+                <li><strong>Teléfono:</strong> +52 (961) 123-4567</li>
+                <li><strong>Redes sociales:</strong></li>
+                <ul>
+                    <li><a href="#">Facebook</a></li>
+                    <li><a href="#">Twitter</a></li>
+                    <li><a href="#">Instagram</a></li>
+                </ul>
+            </ul>
+        </aside>
+    </section>
+</main>
+
+<!-- Pie de página -->
+<footer id="footer">
+    <!-- Contenedor del footer -->
+    <div class="footer-container">
+        <h4>Información Adicional</h4>
+        <!-- Menú de enlaces -->
+        <ul class="footer-menu">
+            <li><a href="acerca_de.html">Acerca de</a></li>
+            <li><a href="ubicacion.html">Ubicación</a></li>
+            <li><a href="contactanos.html" class="active">Contacto</a></li>
+            <li><a href="#">Políticas de privacidad</a></li>
+            <li><a href="#">Términos y condiciones</a></li>
+        </ul>
+        <!-- Información de derechos -->
+        <div class="footer-info">
+            <p>© 2025 SISTEC READ. Todos los derechos reservados.</p>
+            <p>Promoviendo la lectura y el conocimiento en Tuxtla Gutiérrez.</p>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
