Se añadio el README

--- a/contactanos.html
+++ b/contactanos.html
@@ -9,9 +9,8 @@
 </head>
 <body>
     <header>
-        <!-- Buscador con botón de buscar -->
         <div class="search-container">
-            <input type="search" placeholder="Buscar libros por título o autor..." class="search-input" id="searchInput">
+            <input type="search" placeholder="Buscar Libros" class="search-input" id="searchInput">
             <button type="button" class="search-button" onclick="buscarLibros()">Buscar</button>
         </div>
         <nav class="main-nav">
