Actualizacion de footer, y agregacion de nuevas pestañas

--- a/pages/index.html
+++ b/pages/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SISTEC READ - Inicio</title>
     <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="icon" href="https://tse3.mm.bing.net/th/id/OIP.nBwIfauMfjWd0qbnifW7YgHaHa?rs=1&pid=ImgDetMain&o=7&rm=3 ">
 </head>
 <body>
@@ -239,7 +240,7 @@
                 </p>
                 <div class="cta-buttons">
                     <a href="categorias.html" class="btn btn-primary">Ver Todas las Categorías</a>
-                    <a href="" class="btn btn-secondary">Leer Reseñas</a>
+                    <a href="reseñas.html" class="btn btn-secondary">Leer Reseñas</a>
                 </div>
             </div>
         </section>
@@ -249,19 +250,50 @@
 <!-- Pie de página con información adicional -->
 <section id="footer">
     <footer>
+
         <div class="footer-container">
             <h4>Información Adicional</h4>
-            <ul class="footer-menu">
-                <li><a href="acerca_de.html">Acerca de</a></li>
-                <li><a href="ubicacion.html">Ubicación</a></li>
-                <li><a href="contactanos.html">Contacto</a></li>
-                <li><a href="">Políticas de privacidad</a></li>
-                <li><a href="">Términos y condiciones</a></li>
-            </ul>
+            <!--Columnas para footer-->
+            <div class="footer-columns">
+                <div class="footer-column">
+                    <h5>SISTEC READ</h5>
+                    <ul>
+                        <li><a href="acerca_de.html">NOSOTROS</a></li>
+                        <li><a href="ubicacion.html">UBICACIÓN</a></li>
+                    </ul>
+                </div>
+                <!--Columnas para footer-->
+                <div class="footer-column">
+                    <h5>SERVICIO AL CLIENTE</h5>
+                    <ul>
+                        <li><a href="contactanos.html">CONTACTO</a></li>
+                        <li><a href="">POLÍTICAS DE PRIVACIDAD</a></li>
+                        <li><a href="">TÉRMINOS Y CONDICIONES</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer-column">
+                    <h5>SOBRE NOSOTROS</h5>
+                    <ul>
+                        <li><a href="mision.html">MISIÓN</a> </li>
+                        <li><a href="vision.html">VISIÓN</a> </li>
+                        <li><a href="valores.html">VALORES</a> </li>
+                    </ul>
+                </div>
+                <div class="footer-column">
+                    <h5>REDES</h5>
+                    <ul>
+                        <li><a href="https://www.instagram.com/sistec_read?igsh=MWl1dXhmMHh4djBkcw=="><i class="fab fa-instagram"></i> Instagram</a></li>                        <li><a href="vision.html">VISIÓN</a> </li>
+                        <li><a href="valores.html">VALORES</a> </li>
+                    </ul>
+                </div>
+            </div>
+
             <div class="footer-info">
                 <p>&copy; 2025 SISTEC READ. Todos los derechos reservados.</p>
                 <p>Promoviendo la lectura y el conocimiento en nuestra comunidad.</p>
             </div>
+
         </div>
     </footer>
 </section>
