--- a/pages/reseñas.html
+++ b/pages/reseñas.html
@@ -75,22 +75,47 @@
         </div>
     </main>
 
-    <footer id="footer">
-        <div class="footer-container">
-            <h4>Información Adicional</h4>
-            <ul class="footer-menu">
-                <li><a href="acerca_de.html">Acerca de</a></li>
-                <li><a href="ubicacion.html">Ubicación</a></li>
-                <li><a href="contactanos.html">Contacto</a></li>
-                <li><a href="reseñas.html">Reseñas</a></li>
-                <li><a href="#">Políticas de privacidad</a></li>
-                <li><a href="#">Términos y condiciones</a></li>
-            </ul>
-            <div class="footer-info">
-                <p>&copy; 2025 SISTEC READ. Todos los derechos reservados.</p>
-                <p>Promoviendo la lectura y el conocimiento en Tuxtla Gutiérrez.</p>
+    <!-- Pie de página con información adicional -->
+    <section id="footer">
+        <footer>
+
+            <div class="footer-container">
+                <h4>Información Adicional</h4>
+                <!--Columnas para footer-->
+                <div class="footer-columns">
+                    <div class="footer-column">
+                        <h5>SISTEC READ</h5>
+                        <ul>
+                            <li><a href="acerca_de.html">NOSOTROS</a></li>
+                            <li><a href="ubicacion.html">UBICACIÓN</a></li>
+                        </ul>
+                    </div>
+                    <!--Columnas para footer-->
+                    <div class="footer-column">
+                        <h5>SERVICIO AL CLIENTE</h5>
+                        <ul>
+                            <li><a href="contactanos.html">CONTACTO</a></li>
+                            <li><a href="">POLÍTICAS DE PRIVACIDAD</a></li>
+                            <li><a href="">TÉRMINOS Y CONDICIONES</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="footer-column">
+                        <h5>SOBRE NOSOTROS</h5>
+                        <ul>
+                            <li><a href="mision.html">MISIÓN</a> </li>
+                            <li><a href="vision.html">VISIÓN</a> </li>
+                            <li><a href="valores.html">VALORES</a> </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="footer-info">
+                    <p>&copy; 2025 SISTEC READ. Todos los derechos reservados.</p>
+                    <p>Promoviendo la lectura y el conocimiento en nuestra comunidad.</p>
+                </div>
             </div>
-        </div>
-    </footer>
+        </footer>
+    </section>
 </body>
 </html>
