--- a/pages/acerca_de.html
+++ b/pages/acerca_de.html
@@ -9,10 +9,6 @@
 </head>
 <body>
     <header>
-        <div class="search-container">
-            <input type="search" placeholder="Buscar Libros" class="search-input" id="searchInput">
-            <button type="button" class="search-button" onclick="buscarLibros()">Buscar</button>
-        </div>
         <nav class="main-nav">
             <div class="nav-container">
                 <div class="logo">
@@ -26,6 +22,10 @@
                 </ul>
             </div>
         </nav>
+        <div class="search-container">
+            <input type="search" placeholder="Buscar Libros" class="search-input" id="searchInput">
+            <button type="button" class="search-button" onclick="buscarLibros()">Buscar</button>
+        </div>
     </header>
 
     <main>
@@ -37,21 +37,7 @@
                     <p>SISTEC READ fue fundada en 2020 en Tuxtla Gutiérrez por un grupo de apasionados por la lectura: Gutiérrez Nuñez Alejandro, Guzmán Chablé Jeizer Oswaldo y Sánchez Villanueva Fernando de Jesús. Con la visión de fomentar el acceso al conocimiento, nuestros fundadores crearon una librería que combina un catálogo diverso con un compromiso profundo con la comunidad lectora de Chiapas. Actualmente, la librería es dirigida por Alejandro Gutiérrez Nuñez, quien actúa como director general, y administrada por Jeizer Guzmán Chablé, asegurando una gestión eficiente y un servicio de calidad para todos nuestros clientes.</p>
                     <img src="https://images.unsplash.com/photo-1524995997946-a1c2e315a42f?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Pila de libros en una librería" class="libro-imagen">
                 </article>
-                <article>
-                    <h2 class="categoria-titulo">Misión, visión y valores</h2>
-                    <ul>
-                        <li><strong>Misión:</strong> Promover la lectura como pilar de desarrollo personal y cultural, ofreciendo un catálogo diverso y accesible.</li>
-                        <li><strong>Visión:</strong> Ser la librería líder en Chiapas, reconocida por su calidad y compromiso con la comunidad lectora.</li>
-                        <li><strong>Valores:</strong>
-                            <ol>
-                                <li>Pasión por los libros</li>
-                                <li>Compromiso con la comunidad</li>
-                                <li>Excelencia en el servicio</li>
-                                <li>Inclusión y diversidad</li>
-                            </ol>
-                        </li>
-                    </ul>
-                </article>
+
                 <aside>
                     <h3>¿Por qué elegirnos?</h3>
                     <ul>
@@ -65,22 +51,48 @@
         </div>
     </main>
 
-    <footer id="footer">
-        <div class="footer-container">
-            <h4>Información Adicional</h4>
-            <ul class="footer-menu">
-                <li><a href="acerca_de.html">Acerca de</a></li>
-                <li><a href="ubicacion.html">Ubicación</a></li>
-                <li><a href="contactanos.html">Contacto</a></li>
-                <li><a href="#">Políticas de privacidad</a></li>
-                <li><a href="#">Términos y condiciones</a></li>
-            </ul>
-            <div class="footer-info">
-                <p>&copy; 2025 SISTEC READ. Todos los derechos reservados.</p>
-                <p>Promoviendo la lectura y el conocimiento en Tuxtla Gutiérrez.</p>
+    <!-- Pie de página con información adicional -->
+    <section id="footer">
+        <footer>
+
+            <div class="footer-container">
+                <h4>Información Adicional</h4>
+                <!--Columnas para footer-->
+                <div class="footer-columns">
+                    <div class="footer-column">
+                        <h5>SISTEC READ</h5>
+                        <ul>
+                            <li><a href="acerca_de.html">NOSOTROS</a></li>
+                            <li><a href="ubicacion.html">UBICACIÓN</a></li>
+                        </ul>
+                    </div>
+                    <!--Columnas para footer-->
+                    <div class="footer-column">
+                        <h5>SERVICIO AL CLIENTE</h5>
+                        <ul>
+                            <li><a href="contactanos.html">CONTACTO</a></li>
+                            <li><a href="">POLÍTICAS DE PRIVACIDAD</a></li>
+                            <li><a href="">TÉRMINOS Y CONDICIONES</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="footer-column">
+                        <h5>Sobre nosotros</h5>
+                        <ul>
+                            <li><a href="mision.html">MISIÓN</a> </li>
+                            <li><a href="vision.html">VISIÓN</a> </li>
+                            <li><a href="valores.html">VALORES</a> </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="footer-info">
+                    <p>&copy; 2025 SISTEC READ. Todos los derechos reservados.</p>
+                    <p>Promoviendo la lectura y el conocimiento en nuestra comunidad.</p>
+                </div>
             </div>
-        </div>
-    </footer>
+        </footer>
+    </section>
 </body>
 </html>
 
