--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -5,13 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SISTEC READ - Ubicación</title>
     <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <link rel="icon" href="https://tse3.mm.bing.net/th/id/OIP.nBwIfauMfjWd0qbnifW7YgHaHa?rs=1&pid=ImgDetMain&o=7&rm=3">
 </head>
 <body>
 <header>
-    <div class="search-container">
-        <input type="search" placeholder="Buscar Libros" class="search-input" id="searchInput">
-        <button type="button" class="search-button" onclick="buscarLibros()">Buscar</button>
-    </div>
+
     <nav class="main-nav">
         <div class="nav-container">
             <div class="logo">
@@ -25,6 +24,10 @@
             </ul>
         </div>
     </nav>
+    <div class="search-container">
+        <input type="search" placeholder="Buscar Libros" class="search-input" id="searchInput">
+        <button type="button" class="search-button" onclick="buscarLibros()">Buscar</button>
+    </div>
 </header>
 
 <main>
@@ -60,7 +63,15 @@
                     </tbody>
                 </table>
             </article>
-            <article>
+            <aside>
+                <h3>Cómo llegar</h3>
+                <ul>
+                    <li><strong>En auto:</strong> Estacionamiento disponible en las calles aledañas.</li>
+                    <li><strong>Transporte público:</strong> Colectivo línea 1, parada "Plaza Central".</li>
+                    <li><strong>A pie:</strong> A 5 minutos caminando desde la Catedral de San Marcos.</li>
+                </ul>
+            </aside>
+            <article class="section-map" >
                 <h2 class="categoria-titulo">Encuéntranos en el mapa</h2>
                 <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3877.706311176253!2d-93.1593683!3d16.760791!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85ecd98cdd9a8c75%3A0xbba0ef33c7665ea4!2sCasa%20de%20gopar%20Toledo!5e0!3m2!1ses-419!2smx!4v1727463799999!5m2!1ses-419!2smx"
@@ -72,33 +83,50 @@
                         referrerpolicy="no-referrer-when-downgrade">
                 </iframe>
             </article>
-            <aside>
-                <h3>Cómo llegar</h3>
-                <ul>
-                    <li><strong>En auto:</strong> Estacionamiento disponible en las calles aledañas.</li>
-                    <li><strong>Transporte público:</strong> Colectivo línea 1, parada "Plaza Central".</li>
-                    <li><strong>A pie:</strong> A 5 minutos caminando desde la Catedral de San Marcos.</li>
-                </ul>
-            </aside>
         </section>
     </div>
 </main>
 
-<footer id="footer">
-    <div class="footer-container">
-        <h4>Información Adicional</h4>
-        <ul class="footer-menu">
-            <li><a href="acerca_de.html">Acerca de</a></li>
-            <li><a href="ubicacion.html">Ubicación</a></li>
-            <li><a href="contactanos.html">Contacto</a></li>
-            <li><a href="#">Políticas de privacidad</a></li>
-            <li><a href="#">Términos y condiciones</a></li>
-        </ul>
-        <div class="footer-info">
-            <p>&copy; 2025 SISTEC READ. Todos los derechos reservados.</p>
-            <p>Promoviendo la lectura y el conocimiento en Tuxtla Gutiérrez.</p>
+<!-- Pie de página con información adicional -->
+<section id="footer">
+    <footer>
+        <div class="footer-container">
+            <h4>Información Adicional</h4>
+            <!--Columnas para footer-->
+            <div class="footer-columns">
+                <div class="footer-column">
+                    <h5>SISTEC READ</h5>
+                    <ul>
+                        <li><a href="acerca_de.html">NOSOTROS</a></li>
+                        <li><a href="ubicacion.html">UBICACIÓN</a></li>
+                    </ul>
+                </div>
+                <!--Columnas para footer-->
+                <div class="footer-column">
+                    <h5>SERVICIO AL CLIENTE</h5>
+                    <ul>
+                        <li><a href="contactanos.html">CONTACTO</a></li>
+                        <li><a href="">POLÍTICAS DE PRIVACIDAD</a></li>
+                        <li><a href="">TÉRMINOS Y CONDICIONES</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer-column">
+                    <h5>SOBRE NOSOTROS</h5>
+                    <ul>
+                        <li><a href="mision.html">MISIÓN</a> </li>
+                        <li><a href="vision.html">VISIÓN</a> </li>
+                        <li><a href="valores.html">VALORES</a> </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="footer-info">
+                <p>&copy; 2025 SISTEC READ. Todos los derechos reservados.</p>
+                <p>Promoviendo la lectura y el conocimiento en nuestra comunidad.</p>
+            </div>
         </div>
-    </div>
-</footer>
+    </footer>
+</section>
 </body>
 </html>
